# kinda-lang-agents

./: .gitignore  LICENSE  README.md  ROADMAP.md  STANDARD_BOT_LAUNCHER.md  STATE_MANAGEMENT_SUMMARY.md  USAGE.md  automation.md  pyproject.toml
.kinda/: compliance_report.json
agents/: WORKFLOW_SUMMARY.md  architect.md  claude_code_session_context.md  coder.md  coder_old.md  coordinator.md  kinda-lang-coordinator.md  project_manager.md  reviewer.md  reviewer_old.md  tester.md
agents/archived/: README.md  coder.md  project_manager.md  scrum_master.md
docs/: 5_AGENT_WORKFLOW_PROTOCOL.md  VALIDATION.md
examples/: agent_workflow_example.md  hello_placeholder.txt
infrastructure/: BOT_SETUP_GUIDE.md  dod.json
infrastructure/scripts/: audit-dod.sh  bot-auth.sh  bot-completion.sh  bot-env.sh  bot-python-env.sh  bot-setup.sh  bot-startup.sh  ci-local.sh  claude-sync.sh  coder-session.sh  coder-startup.sh  enforce-bot-auth.sh  fork-setup.sh  gh-coder  gh-pm  gh-reviewer  launch-bot.sh  launch-coder-standard.sh  launch-coder.sh  launch-reviewer.sh  python-wrapper.sh  reviewer-session.sh  reviewer-startup.sh  setup-global-env.sh  setup-python-env.sh  state-manager.sh  sync-upstream.sh  test-bot-auth.sh
infrastructure/state/: README.md  state-test.sh
state/: pm_strategic_state.json
status/: pr-51-completed.md
templates/: code_review.md  task_breakdown.md
